src/snapshots/fern__ir__tests__nested_scopes.snap
---
source: src/ir.rs
expression: program.program()
---
Program {
    globals: [],
    functions: [
        Function {
            parameters: 0,
            result: None,
            values: [
                Value {
                    span: None,
                    ty: Int,
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Int,
                    kind: Load(
                        Local(
                            LocalId(
                                1,
                            ),
                        ),
                    ),
                },
                Value {
                    span: None,
                    ty: Int,
                    kind: Load(
                        Local(
                            LocalId(
                                0,
                            ),
                        ),
                    ),
                },
            ],
            flow: ControlFlow {
                entry: BlockId(
                    0,
                ),
                locals: [
                    Int,
                    Int,
                    Int,
                ],
                blocks: [
                    Block {
                        instructions: [
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Integer {
                                    value: 1,
                                    ty: Int,
                                },
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                                operand: Integer {
                                    value: 42,
                                    ty: Int,
                                },
                            },
                            Value(
                                ValueId(
                                    0,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        1,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        0,
                                    ),
                                ),
                            },
                            Value(
                                ValueId(
                                    1,
                                ),
                            ),
                            Store {
                                place: Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                                operand: Value(
                                    ValueId(
                                        1,
                                    ),
                                ),
                            },
                            Store {
                                place: Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                                operand: Integer {
                                    value: 7,
                                    ty: Int,
                                },
                            },
                            Value(
                                ValueId(
                                    2,
                                ),
                            ),
                        ],
                        terminator: Exit {
                            status: Value(
                                ValueId(
                                    2,
                                ),
                            ),
                        },
                    },
                ],
            },
        },
    ],
    main: FunctionId(
        0,
    ),
}
